@@ -1,3 +1,8 @@
+2009-01-25  Vincent Untz  <vuntz@gnome.org>
+
+	* gnome-rr-config.c: (get_config_filename): create the config dir if it
+	doesn't already exist, thus allowing creation of the config file :-)
+
 ==================== 2.25.5 ====================
 
 2009-01-19  Ray Strode  <rstrode@redhat.com>
